@@ -390,10 +390,11 @@ CSetting *SettingNewFromPyList(PyObject *list);
 #define cSetting_scenes_changed              254
 
 #define cSetting_gaussian_lambda             255
+#define cSetting_pdb_standard_order          256
 
 /* cSetting_INIT must always be last setting_index +1 */
 
-#define cSetting_INIT                        256
+#define cSetting_INIT                        257
 
 #endif
 
